--- a/docs/HTML/emdb.css
+++ b/docs/HTML/emdb.css
@@ -4,19 +4,16 @@ body {
     color: #fff;
     background: #101010;
     margin: 0;
-
+  min-height: 100%;
+  height: 100%;
 }
 div.if{
 /*display:none;*/
 }
 html {
   height: 100%;
-  cursor: pointer;
 }
-body {
-  min-height: 100%;
-  cursor: pointer;
-}
+
 a:link { text-decoration: none!important; }
 
 
@@ -39,7 +36,7 @@ svg {
 #gooey-button {
   align-items: center;
   background-color: #0c1016;
-
+  cursor: pointer;
 font-weight:800;
   justify-content: center;
   margin: 0;
